/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.Charges.Contracts";

/*
* This request is sent by the Metering Point domain to the Charges domain requesting default charges to be linked to a new metering point and
* market participants to be notified in accordance with a defined rule set for distribution.
*
* Expected request meta data:
* RequestId - Generated by the domain sending the request - UUID for the request. Will be applied to the reply message's meta data for tracing
* ProcessId - Generated by the domain sending the request - UUID for the 'create metering point process'. Will be applied to the reply message's meta data for tracing
* ReplyTo - The domain sending the request provides a reply-path to a location where the reply must be sent
*/
message CreateDefaultChargeLinks {
  string metering_point_id = 1; // Identifies the metering point to link default charges to. For the Danish version of Green Energy Hub, this is the 18-digits metering point id.
}